<resources>

    <string name="app_name">DeliveryAndroid</string>
    <string name="provider_label">Pedidos</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="title_order_list">Orders</string>
    <string name="title_authenticator">LogIn</string>
    <string name="login_title">Entre com seu código e seua senha para autenticar-se.</string>
    <string name="login_hint">Código de entregador</string>
    <string name="password_hint">Senha de acesso</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="authenticator_label">Entregador</string>
    <string name="select_server_menu_title">Selecionar servidor</string>
    <string name="select_server_dialog_title">Servidor de entregas</string>
    <string name="select_server_dialog_lbl">Insira o endereço (ou ip) do servidor:</string>
    <string name="selected_server_msg">Endereço do servidor alterado para %1$s</string>
    <string name="select_server_hint">Ex: 192.168.1.100:8080</string>
    <string name="incomplete_login_info">Preencha os dados de login corretamente</string>
    <string name="incorrect_login_info">Login ou senha inválidos</string>
    <string name="authenticating">Aguarde enquanto a tentativa de login é realizada</string>
    <string name="connection_error_message">Não foi possível conectar com o servidor</string>
    
    <string name="account_already_added_title">Conta configurada</string>
    <string name="account_already_added">Você só pode configurar uma conta de entregador!</string>
    <string name="order_detail_title">Detalhes do pedido</string>
    <string name="order_detail_tab">Detalhes do pedido</string>
    <string name="charge_msg">O pedido deverá ser cobrado no momento da entrega</string>
    <string name="change_view_string">Valor do troco R$: %1$s\nValor a ser recebido R$: %2$s</string>
    <string name="address_view">Rua: %1$s, %2$s %3$s, Bairro: %4$s, Cidade: %5$s-%6$s, CEP: %7$s</string>
    <string name="date_time_title">"Pedido realizado em "</string>
    <string name="maps_button">Rota para o endereço</string>
    
    <string name="authentication_error_msg">Erro de autenticação</string>
    <string name="canceled_error_msg">O sync foi cancelado!</string>
    <string name="io_error_msg">Houve algum problema na comunicação com o servidor</string>
    <string name="parser_error_msg">Não foi possível ler o conteúdo recebido</string>
    
    <string name="finalize_order_confirmation_title">Finalizar pedido!</string>
    <string name="finalize_order_confimation_message">Você está prestes a finalizar o pedido.\nSó realize esta operação se a entrega já tiver sido completamente realizada!</string>
    <string name="finalize_order_confirmation_ok">Finalizar!</string>
    <string name="finalize_order_confirmation_cancel">Cancelar</string>
    
    <string name="loading">Carregando...</string>
    
    <string name="loading_order">Carregando pedido...</string>
    <string name="finishing_order">Fechando pedido...</string>
    <string name="error_finishing_order">Houve algum erro ao finalizar o pedido!</string>

</resources>