<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authenticator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/top_margin_activity"
    tools:context=".account.AuthenticatorActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" >

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ok_btn"
                android:onClick="handleLogin" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel_btn"
                android:onClick="handleCancel" />
            
        </LinearLayout>

        <EditText
            android:id="@+id/login_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/login_hint"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_box"
            android:layout_below="@+id/login_box"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>
