
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:text="@string/order_detail_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/order_id_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title"
            android:layout_below="@+id/order_id_view"
            android:layout_marginTop="34dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/charge_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/description"
            android:layout_below="@+id/description"
            android:layout_marginTop="30dp"
            android:text="@string/charge_msg"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/charge_msg"
            android:layout_below="@+id/charge_msg"
            android:text="@string/change_view_string"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/address_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/change"
            android:layout_below="@+id/change"
            android:layout_marginTop="25dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/map_button"
            android:background="@drawable/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/address_view"
            android:layout_below="@+id/address_view"
            android:layout_marginTop="37dp"
            style="@style/button_text"
            android:text="@string/maps_button" />

        <TextView
            android:id="@+id/date_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/map_button"
            android:layout_below="@+id/map_button"
            android:layout_marginTop="23dp"
            android:text="@string/date_time_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/date_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/date_time_title"
            android:layout_toRightOf="@+id/date_time_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/client_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
